--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lamadmin",
+  "name": "cx",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
